tests/ucc/bind/good/fun-vs-var.c
void fu(void);

void fu(void)
{

}

int main(void)
{
    int fu;
    return fu;
}
