tests/ucc/bind/bad/union-vs-var.c
struct a
{
    char a;
};

union a
{
    int a;
};

int main(void)
{
    return 0;
}
